--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,6 @@
-
+#spring:
+#  resources:
+#    static-locations: classpath:/static/
+#    add-mappings: true
+#  mvc:
+#    static-path-pattern: /static/**
