--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@
 project:
   base-dir: file:///C:/Users/gyun/IdeaProjects/cellit
 spring:
+  datasource:
+    url: jdbc:postgresql://10.0.0.204:5432/postgres
+    username: postgres
+    password: 930324
   resources:
     static-locations: ${project.base-dir}/src/main/resources/static/
     cache:
@@ -15,3 +19,19 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate.format_sql: true
+    show-sql: true
+  output:
+    ansi:
+      enabled: always
+
+logging:
+  level:
+    org.springframework.web.client: DEBUG
+#    org.hibernate.SQL : DEBUG
+#    org.hibernate.type : trace
+    org.hibernate.type.descriptor.sql : TRACE
