--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,9 +7,9 @@ spring:
     hikari.jdbc-url: jdbc:h2:mem:testdb
 
 my-app:
-  testAdminUsername: test_ewan_admin
+  testAdminAccountname: test_ewan_admin
   testAdminPassword: 123
-  testUserUsername: test_ewan_user
+  testUserAccountname: test_ewan_user
   testUserPassword: 123
 
 #  jpa:
