--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,10 @@
 project:
   base-dir: file:///C:/Users/gyun/IdeaProjects/cellit
 
-spring:
+server:
+  port: 8081
 
+spring:
   datasource:
     #url: jdbc:postgresql://10.0.0.204:5432/postgres
     url: jdbc:postgresql://192.168.119.130:5432/postgres
