--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     username: sa
     password:
-    url: jdbc:h2:tcp://localhost/~/test #jdbc:h2:mem:testdb
+    #url: jdbc:h2:tcp://localhost/~/test #jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
-    #hikari.jdbc-url: jdbc:h2:mem:testdb
+    hikari.jdbc-url: jdbc:h2:mem:testdb
 
 my-app:
   testAdminAccountname: test_ewan_admin
