--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,11 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://10.0.0.204:5432/postgres
-    #url: jdbc:postgresql://192.168.119.130:5432/postgres
-    username: postgres
-    password: 930324
+    #url: jdbc:postgresql://10.0.0.204:5432/postgres
+    #url: jdbc:postgresql://172.17.0.1:5432/postgres
+    url: jdbc:postgresql://192.168.119.130:5432/postgres
+    username: erp
+    password: erp
 
 # response bad request when api get value with out of bind
   jackson:
