--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://10.0.0.204:5432/postgres
+    #url: jdbc:postgresql://10.0.0.204:5432/postgres
     #url: jdbc:postgresql://172.17.0.1:5432/ps
-    #url: jdbc:postgresql://192.168.119.130:5432/postgres
+    url: jdbc:postgresql://192.168.117.128:5432/postgres
+    #url: jdbc:postgresql://192.168.117.128:5432/postgres
     #url: jdbc:postgresql://169.254.6.176:5432/ps
-    username: erp
-    password: erp
+    username: postgres
+    password: 9303
 
 # response bad request when api get value with out of bind
   jackson:
